worked on banner

--- a/index.html
+++ b/index.html
@@ -16,30 +16,38 @@
 			<body>
 				<div>
 					<!-- start navigation -->
-				<nav class="navbar navbar-fixed-top navbar-default" role="navigation" id="mainNav">
-						<div class="container-fluid">
-							<div class="navbar-header">
-								<button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-									<span class="icon icon-bar"></span>
-									<span class="icon icon-bar"></span>
-									<span class="icon icon-bar"></span>
-								</button>
-								<a href="#" class="navbar-brand" style='margin-left:0px;'><img src="" class="img-responsive" alt="logo"></a>
+					<nav class="navbar navbar-fixed-top navbar-default" role="navigation" id="mainNav">
+							<div class="container-fluid">
+								<div class="navbar-header">
+									<button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+										<span class="icon icon-bar"></span>
+										<span class="icon icon-bar"></span>
+										<span class="icon icon-bar"></span>
+									</button>
+									<a href="#" class="navbar-brand"><img src="" class="img-responsive" alt="logo"></a>
+								</div>
+								<div class="collapse navbar-collapse">
+									<ul class="nav navbar-nav navbar-right mynavbar">
+										<li><a href="#home">HOME</a></li>
+										<li><a href="#services">SERVICES</a></li>
+										<li><a href="#portfolio">PORTFOLIO</a></li>
+										<li><a href="#about">ABOUT US</a></li>
+										<li><a href="#contact">CONTACT</a></li>
+									</ul>
+								</div>
 							</div>
-							<div class="collapse navbar-collapse">
-								<ul class="nav navbar-nav navbar-right mynavbar">
-									<li><a href="#home">HOME</a></li>
-									<li><a href="#services">SERVICES</a></li>
-									<li><a href="#portfolio">PORTFOLIO</a></li>
-									<li><a href="#about">ABOUT US</a></li>
-									<li><a href="#contact">CONTACT</a></li>
-								</ul>
+						</nav>
+						<!-- end navigation -->
+			
+						<!-- start banner -->
+						<section id="home" class="text-center">
+							<div class="bannner-block">
+							<div class="welcome-msg">
+							
 							</div>
-						</div>
-					</nav>
-					<!-- end navigation -->
-		
-		
+							</div>				
+						</section>
+						<!--end banner -->
 				</div>
 
 			<!-- jQuery -->
