--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         <title> Company </title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+				<!-- animate -->
+				<link rel="stylesheet" href="css/animate.min.css">
 				<!-- bootstrap -->
 				<link rel="stylesheet" href="css/bootstrap.min.css">
 				<!-- font-awesome -->
@@ -28,11 +30,11 @@
 								</div>
 								<div class="collapse navbar-collapse">
 									<ul class="nav navbar-nav navbar-right mynavbar">
-										<li><a href="#home">HOME</a></li>
-										<li><a href="#services">SERVICES</a></li>
-										<li><a href="#portfolio">PORTFOLIO</a></li>
-										<li><a href="#about">ABOUT US</a></li>
-										<li><a href="#contact">CONTACT</a></li>
+										<li><a href="#home" class="js-scroll-trigger">HOME</a></li>
+										<li><a href="#services" class="js-scroll-trigger">SERVICES</a></li>
+										<li><a href="#portfolio" class="js-scroll-trigger">PORTFOLIO</a></li>
+										<li><a href="#about" class="js-scroll-trigger">ABOUT US</a></li>
+										<li><a href="#contact" class="js-scroll-trigger">CONTACT</a></li>
 									</ul>
 								</div>
 							</div>
@@ -48,7 +50,7 @@
 							</div>				
 						</section>
 						<!--end banner -->
-						
+
 		            	<!-- start services -->
 						<div class="container" id="services">
 							<div class="section-title"><h2>our services</h2></div>
@@ -108,5 +110,13 @@
 			<script src="js/jquery.js"></script>
 			<!-- bootstrap -->
 			<script src="js/bootstrap.min.js"></script>
+			<!-- wow -->
+			<script src="js/wow.min.js"></script>
+			<!-- Jquery Easing -->
+            <script src="js/jquery.easing.min.js"></script>	
+            <!-- Scrolling Nav	 -->
+			<script src="js/scrolling-nav.js"></script>	
+			<!-- custom -->
+			<script src="js/custom.js"></script>
     </body>
 </html>
