worked on newsletter

--- a/index.html
+++ b/index.html
@@ -194,6 +194,24 @@
 						</div>
 					<!-- end portfolio-->
 
+					<!-- start newsletter-->
+					<div class="container-fluid" style="background-color:rgba(101, 97, 129, 0.75); margin-top:20px;">
+						<div class="row text-row">
+							<div class="newsletter col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6">
+								<h4 class="wow">Subscribe for our <span style="color:#97da29;" >newsletter!</span></h4>
+	    						<p class="wow fadeIn" data-wow-delay=0.2s>Don't Miss Anything <br/> Keep up with the <span style="color:#97da29;" >latest</span> technologies</p>
+							</div>
+						</div>
+						<form class="form-inline wow fadeIn" data-wow-delay=0.3s autocomplete="off">
+							<div class="row input-row">
+								<div class="col-xs-12 col-sm-offset-3 col-sm-6 col-md-offset-4 col-md-4">
+									<div class="col-xs-7 col-sm-8 col-md-8"><input class="form-control" style="width: 100%;" type="text" name="Email" placeholder="Enter your email" required /></div>
+									<div class="col-xs-5 col-sm-4 col-md-4"><button type="submit" class="btn btn-success form-button">Sign Up</button></div>
+								</div>
+							</div>
+						</form>
+					</div>
+					<!-- end newsletter-->
 
 				</div>
 
