worked on about-us

--- a/index.html
+++ b/index.html
@@ -213,6 +213,43 @@
 					</div>
 					<!-- end newsletter-->
 
+					<!-- start about-->
+					<div class="container-fluid" id="about">
+						<div class="section-title wow fadeIn" data-wow-delay=0.1s  style="margin-bottom:35px;"><h2>ABOUT US</h2></div>
+						<div class="jumbotron about-jumbotron" style="border-radius: 0px;">
+							<div class="row wow fadeIn" data-wow-delay=0.3s>
+								<div class="col-md-6">
+									<img src="img/page/about.png" class="img-responsive" style="border-radius: 5px 5px 0px 0px;">
+								</div>
+								<div class="col-md-6 about-brief">
+									<p>We pride ourselves on combining unique talents and outlooks as well as offering a personal and 
+									interactive service that provides round-the clock dedication. 
+									Focused on providing great services through excellent communication, we work with you and your 
+									internal team to ensure that your business excels. Instead of telling you what we do, how about we show you?</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="container-fluid">
+						<div class="jumbotron about-jumbotron" style="border-radius: 0px;">
+							<div class="row wow fadeIn" data-wow-delay=0.3s>
+								<div class="col-md-6 about-brief">
+									<h4>Our Approach</h4>
+									<p>
+										We approach every project with passion and dedication, applying meticulous detail, skill and craftmanship to every stage of the design process.
+									</p>
+								</div>
+								<div class="col-md-6 about-brief">
+									<h4>Our Vision</h4>
+									<p>
+										Our vison constructs the framework of our roadmap. We see ourselves as one of the major players in the field that inspires creative experiences and the upcoming paradigm shift.
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- end about-->
+
 				</div>
 
 			<!-- jQuery -->
