worked on contact-us and footer

--- a/index.html
+++ b/index.html
@@ -250,6 +250,56 @@
 					</div>
 					<!-- end about-->
 
+					<!-- start contact-->
+					<div class="container" id="contact">
+						<div class="row contact-row">
+							<form action="contact.php" method="post">
+							<div class="col-xs-12 col-sm-12 col-md-6">
+								<div id="contact-form">
+									<h4 class="wow">reach out and we'll get back<br/>to you within <span style="color:#97da29;">24Hrs</span></h4>
+									<div class="wow fadeIn"  data-wow-delay=0.4s><div class="col-sm-6 col-md-6"><input class="input-n-e" type="text" name="name" placeholder="Name" autocomplete="off"/></div>
+									<div class="col-sm-6 col-md-6"><input class="input-n-e" type="text" name="email" placeholder="Email" autocomplete="off"/></div>
+									<div class="col-md-12"><textarea class="input-m" type="text" rows="5" name="message" placeholder="Message"></textarea></div>
+									<div class="col-xs-offset-3 col-xs-6 col-sm-offset-4 col-sm-4 col-md-3"><input type="submit" value="Send"/></div>
+									<div class="col-sm-4"></div></div>
+								</div>
+							</div>
+							</form>
+							<div class="col-xs-12 col-sm-12 col-md-6">
+								<div id="contact-info">
+									<h4 class="wow">Social Media</h4>
+									<p class="wow fadeIn"  data-wow-delay=0.4s>Hit us up on social media</p>
+									<div id="social-buttons" class="wow fadeIn"  data-wow-delay=0.9s>	
+										<a class="fa fa-facebook" href="facebook.com"></a>
+										<a class="fa fa-twitter" href="twitter.com"></a>
+										<a class="fa fa-instagram" href="instagram.com"></a>
+										<a class="fa fa-linkedin" href="linkedin.com"></a>
+										<a class="fa fa-google-plus" href="google.com"></a>
+									</div>
+									<div>
+										<h4 class="wow">Visit office</h4>
+										<div class="wow fadeIn"  data-wow-delay=0.4s><p><i class="fa fa-map-marker"></i>Company, Lagos, Nigeria</p>
+										<p><i class="fa fa-phone"></i>08138244150</p>
+										<p><i class="fa fa-envelope-o"></i>hello@company.ng</p></div>
+
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<!-- end contact-->
+
+					<!-- start footer -->
+					<div class="container-fluid footer">
+						<div class="row">
+							<div class="copyright">
+								<span id="copyright-item">© 2017 company.</br> All Rights Reserved</span>
+						    </div>
+						</div>
+					</div>
+					<!-- end footer -->
+
 				</div>
 
 			<!-- jQuery -->
