reduced font and images

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 					<!-- end portfolio-->
 
 					<!-- start newsletter-->
-					<div class="container-fluid" style="background-color:rgba(101, 97, 129, 0.75); margin-top:20px;">
+					<div class="container-fluid" id="subscribe">
 						<div class="row text-row">
 							<div class="newsletter col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6">
 								<h4 class="wow">Subscribe for our <span style="color:#97da29;" >newsletter!</span></h4>
@@ -218,10 +218,10 @@
 						<div class="section-title wow fadeIn" data-wow-delay=0.1s  style="margin-bottom:35px;"><h2>ABOUT US</h2></div>
 						<div class="jumbotron about-jumbotron" style="border-radius: 0px;">
 							<div class="row wow fadeIn" data-wow-delay=0.3s>
-								<div class="col-md-6">
-									<img src="img/page/about.png" class="img-responsive" style="border-radius: 5px 5px 0px 0px;">
+								<div class="col-md-4">
+									<img src="img/page/about.jpg" class="img-responsive" id="abtImg">
 								</div>
-								<div class="col-md-6 about-brief">
+								<div class="col-md-8 about-brief">
 									<p>We pride ourselves on combining unique talents and outlooks as well as offering a personal and 
 									interactive service that provides round-the clock dedication. 
 									Focused on providing great services through excellent communication, we work with you and your 
@@ -234,15 +234,15 @@
 						<div class="jumbotron about-jumbotron" style="border-radius: 0px;">
 							<div class="row wow fadeIn" data-wow-delay=0.3s>
 								<div class="col-md-6 about-brief">
-									<h4>Our Approach</h4>
-									<p>
-										We approach every project with passion and dedication, applying meticulous detail, skill and craftmanship to every stage of the design process.
-									</p>
-								</div>
-								<div class="col-md-6 about-brief">
 									<h4>Our Vision</h4>
 									<p>
 										Our vison constructs the framework of our roadmap. We see ourselves as one of the major players in the field that inspires creative experiences and the upcoming paradigm shift.
+									</p>
+								</div>
+								<div class="col-md-6 about-brief">
+									<h4>Our Approach</h4>
+									<p>
+										We approach every project with passion and dedication, applying meticulous detail, skill and craftmanship to every stage of the design process.
 									</p>
 								</div>
 							</div>
