--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 				<link rel="stylesheet" href="css/animate.min.css">
 				<!-- bootstrap -->
 				<link rel="stylesheet" href="css/bootstrap.min.css">
-				<!-- font-awesome -->
-				<link rel="stylesheet" href="css/font-awesome.min.css">
+				<!-- themify -->
+				<link rel="stylesheet" type="text/css" href="css/themify-icons.css">				
 				<!-- custom -->
 				<link rel="stylesheet" type="text/css" href="css/style.css">
 			</head>
@@ -56,21 +56,21 @@
 						<div class="section-title"><h2>our services</h2></div>
 							<div class ="row">
 								<div class="col-xs-12 col-sm-4 col-md-4 service-block">
-									<div><i class="icon-services-blocks fa fa-bell-o"></i></div>
+									<div><i class="icon-services-blocks ti-bell"></i></div>
 									<div class="services-info">
 											<h3>Consulting</h3>
 											<p>We deliver a combination of customer, business, and technology insights that are necessary for creating effective strategies that are priotized and achievable.</p>
 									</div>
 								</div>
 								<div class="col-xs-12 col-sm-4 col-md-4 service-block">
-									<div><i class="icon-services-blocks fa fa-lightbulb-o"></i></div>
+									<div><i class="icon-services-blocks ti-light-bulb"></i></div>
 									<div class="services-info">
 											<h3>Graphic Design</h3>
 											<p>We create beautiful layouts, designs and illustrations that demonstrate your company's uniqueness and effectively communicate your message.</p>
 									</div>
 								</div>
 								<div class="col-xs-12 col-sm-4 col-md-4 service-block">
-									<div class="wow fadeIn"><i class="icon-services-blocks fa fa-hdd-o"></i></div>
+									<div class="wow fadeIn"><i class="icon-services-blocks ti-package"></i></div>
 									<div class="services-info">
 											<h3>Branding</h3>
 											<p>We deliver a memorable and exquisite brand identities, logo, symbols, typography, icons, colour, illustrations and brand guides.</p>
@@ -81,21 +81,21 @@
 						
 							<div class ="row">
 								<div class="col-xs-12 col-sm-4 col-md-4 service-block">
-									<div><i class="icon-services-blocks fa fa-compress"></i></div>
+									<div><i class="icon-services-blocks ti-stats-up"></i></div>
 									<div class="services-info">
 											<h3>Digital Marketing</h3>
 											<p>We target advertising to suit your needs and budget. Social media marketing, email marketing, campaign monitoring and analytics.</p>
 									</div>
 								</div>
 								<div class="col-xs-12 col-sm-4 col-md-4 service-block">
-									<div><i class="icon-services-blocks fa fa-html5"></i></div>
+									<div><i class="icon-services-blocks ti-mobile"></i></div>
 									<div class="services-info">
 											<h3>Mobile App Development</h3>
 											<p>We build native, hybrid and cross-platform apps running on OS such as Android and iOS that solves business problems, attract users, and reinforce your brand.</p>
 									</div>
 								</div>
 								<div class="col-xs-12 col-sm-4 col-md-4 service-block">
-									<div><i class="icon-services-blocks fa fa-code"></i></div>
+									<div><i class="icon-services-blocks ti-html5"></i></div>
 									<div class="services-info">
 											<h3>Web Development</h3>
 											<p>We deliver mobile responsive designs on microsites, landing pages, web applications, content management systems and ecommerce platforms.</p>
@@ -132,8 +132,7 @@
 								<div class="col-xs-12 col-sm-6 col-md-4">
 									<div class="iso-box img-container wow fadeIn" data-wow-delay=0.3s ><img src="img/portfolio/Branding 1.jpg" class="img-responsive my-img">
 										<div class="portfolio-overlay">
-											<a href="#" class="fa fa-search"></a>
-											<a href="#" class="fa fa-link"></a>
+											<a href="#" class="ti-link"></a>
 											<h4>Branding</h4>
 											<p>Client : UGMONK</p>
 										</div>
@@ -142,8 +141,7 @@
 								<div class="col-xs-12 col-sm-6 col-md-4">
 									<div class="iso-box img-container wow fadeIn" data-wow-delay=0.3s ><img src="img/portfolio/air.jpg" class="img-responsive my-img">
 										<div class="portfolio-overlay">
-											<a href="#" class="fa fa-search"></a>
-											<a href="#" class="fa fa-link"></a>
+											<a href="#" class="ti-link"></a>
 											<h4>Logo Design</h4>
 											<p>Client : AirBnB</p>
 										</div>
@@ -152,8 +150,7 @@
 								<div class="col-xs-12 col-sm-6 col-md-4">
 									<div class="iso-box img-container wow fadeIn" data-wow-delay=0.3s ><img src="img/portfolio/web design.jpg" class="img-responsive my-img">
 										<div class="portfolio-overlay">
-											<a href="#" class="fa fa-search"></a>
-											<a href="#" class="fa fa-link"></a>
+											<a href="#" class="ti-link"></a>
 											<h4>Web Design</h4>
 											<p>Client : Envato</p>
 										</div>
@@ -162,8 +159,8 @@
 									<div class="col-xs-12 col-sm-6 col-md-4">
 										<div class="iso-box img-container wow fadeIn" data-wow-delay=0.5s ><img src="img/portfolio/square.jpg" class="img-responsive my-img">
 											<div class="portfolio-overlay">
-												<a href="#" class="fa fa-search"></a>
-												<a href="#" class="fa fa-link"></a>
+
+												<a href="#" class="ti-link"></a>
 												<h4>Logo Design</h4>
 												<p>Client : Square</p>
 											</div>
@@ -172,8 +169,8 @@
 									<div class="col-xs-12 col-sm-6 col-md-4">
 										<div class="iso-box img-container wow fadeIn" data-wow-delay=0.5s ><img src="img/portfolio/webdesign.jpg" class="img-responsive my-img">
 											<div class="portfolio-overlay">
-												<a href="#" class="fa fa-search"></a>
-												<a href="#" class="fa fa-link"></a>
+
+												<a href="#" class="ti-link"></a>
 												<h4>Web Design</h4>
 												<p>Client : Emile</p>
 											</div>
@@ -182,8 +179,8 @@
 									<div class="col-xs-12 col-sm-6 col-md-4">
 										<div class="iso-box img-container wow fadeIn" data-wow-delay=0.5s ><img src="img/portfolio/Branding 2.jpg" class="img-responsive my-img">
 											<div class="portfolio-overlay">
-												<a href="#" class="fa fa-search"></a>
-												<a href="#" class="fa fa-link"></a>
+
+												<a href="#" class="ti-link"></a>
 												<h4>Branding</h4>
 												<p>Client : Strix</p>
 											</div>
@@ -270,17 +267,17 @@
 									<h4 class="wow">Social Media</h4>
 									<p class="wow fadeIn"  data-wow-delay=0.4s>Hit us up on social media</p>
 									<div id="social-buttons" class="wow fadeIn"  data-wow-delay=0.9s>	
-										<a class="fa fa-facebook" href="facebook.com"></a>
-										<a class="fa fa-twitter" href="twitter.com"></a>
-										<a class="fa fa-instagram" href="instagram.com"></a>
-										<a class="fa fa-linkedin" href="linkedin.com"></a>
-										<a class="fa fa-google-plus" href="google.com"></a>
+										<a class="ti-facebook" href="facebook.com"></a>
+										<a class="ti-twitter" href="twitter.com"></a>
+										<a class="ti-instagram" href="instagram.com"></a>
+										<a class="ti-linkedin" href="linkedin.com"></a>
+										<a class="ti-google" href="google.com"></a>
 									</div>
 									<div>
 										<h4 class="wow">Visit office</h4>
-										<div class="wow fadeIn"  data-wow-delay=0.4s><p><i class="fa fa-map-marker"></i>Company, Lagos, Nigeria</p>
-										<p><i class="fa fa-phone"></i>08138244150</p>
-										<p><i class="fa fa-envelope-o"></i>hello@company.ng</p></div>
+										<div class="wow fadeIn"  data-wow-delay=0.4s><p><i class="ti-location-pin"></i>Company, Lagos, Nigeria</p>
+										<p><i class="ti-mobile"></i>08138244150</p>
+										<p><i class="ti-email"></i>hello@company.ng</p></div>
 
 									</div>
 								</div>
