Optimized using Chrome Coverage

--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
-				<!-- animate -->
-				<link rel="stylesheet" href="css/animate.min.css">
 				<!-- bootstrap -->
 				<link rel="stylesheet" href="css/bootstrap.min.css">
 				<!-- themify -->
@@ -108,7 +106,7 @@
 					<!-- start min banner-->
 					<div class="jumbotron min-banner">
 						<div class="mb-content1">
-							<h3 class="wow">We are<span style="color: #97da29;">Creative</span> & <span style="color: #97da29;">Dedicated</span></h3>
+							<h3 class="wow">We are<span style="color: #97da29;"> Creative</span> & <span style="color: #97da29;">Dedicated</span></h3>
 							<p class="wow fadeIn" data-wow-delay="0.4s"> As we are fundamentally freelancers, we offer something different than bigger agencies...<br>Total dedication, flexible working times and professionalism.</p> 
 						</div>
 
@@ -211,36 +209,40 @@
 					<!-- end newsletter-->
 
 					<!-- start about-->
-					<div class="container-fluid" id="about">
-						<div class="section-title wow fadeIn" data-wow-delay=0.1s  style="margin-bottom:35px;"><h2>ABOUT US</h2></div>
-						<div class="jumbotron about-jumbotron" style="border-radius: 0px;">
-							<div class="row wow fadeIn" data-wow-delay=0.3s>
-								<div class="col-md-4">
-									<img src="img/page/about.jpg" class="img-responsive" id="abtImg">
-								</div>
-								<div class="col-md-8 about-brief">
-									<p>We pride ourselves on combining unique talents and outlooks as well as offering a personal and 
-									interactive service that provides round-the clock dedication. 
-									Focused on providing great services through excellent communication, we work with you and your 
-									internal team to ensure that your business excels. Instead of telling you what we do, how about we show you?</p>
+					<div id="about">
+						<div class="section-title wow fadeIn" data-wow-delay=0.1s><h2>ABOUT US</h2></div>
+						<div class="about">
+							<div class="container">										
+								<div class="row  wow fadeIn" data-wow-delay=0.3s>
+									<div class="col-md-4">
+										<img src="img/page/about.jpg" class="img-responsive" id="abtImg">
+									</div>
+									<div class="col-md-8 about-brief">
+										<p>We pride ourselves on combining unique talents and outlooks as well as offering a personal and 
+										interactive service that provides round-the clock dedication. 
+										Focused on providing great services through excellent communication, we work with you and your 
+										internal team to ensure that your business excels. Instead of telling you what we do, how about we show you?</p>
+									</div>
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class="container-fluid">
-						<div class="jumbotron about-jumbotron" style="border-radius: 0px;">
-							<div class="row wow fadeIn" data-wow-delay=0.3s>
-								<div class="col-md-6 about-brief">
-									<h4>Our Vision</h4>
-									<p>
-										Our vison constructs the framework of our roadmap. We see ourselves as one of the major players in the field that inspires creative experiences and the upcoming paradigm shift.
-									</p>
-								</div>
-								<div class="col-md-6 about-brief">
-									<h4>Our Approach</h4>
-									<p>
-										We approach every project with passion and dedication, applying meticulous detail, skill and craftmanship to every stage of the design process.
-									</p>
+					
+					
+						<div class="about">
+							<div class="container">
+								<div class="row wow fadeIn" data-wow-delay=0.3s>
+									<div class="col-md-6 about-brief">
+										<h4>Our Vision</h4>
+										<p>
+											Our vison constructs the framework of our roadmap. We see ourselves as one of the major players in the field that inspires creative experiences and the upcoming paradigm shift.
+										</p>
+									</div>
+									<div class="col-md-6 about-brief">
+										<h4>Our Approach</h4>
+										<p>
+											We approach every project with passion and dedication, applying meticulous detail, skill and craftmanship to every stage of the design process.
+										</p>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -303,8 +305,6 @@
 			<script src="js/jquery.js"></script>
 			<!-- bootstrap -->
 			<script src="js/bootstrap.min.js"></script>
-			<!-- wow -->
-			<script src="js/wow.min.js"></script>
 			<!-- Jquery Easing -->
             <script src="js/jquery.easing.min.js"></script>	
             <!-- Scrolling Nav	 -->
