minor change of styles

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 									</div>
 								</div>
 								<div class="col-xs-12 col-sm-4 col-md-4 service-block">
-									<div class="wow fadeIn"><i class="icon-services-blocks ti-package"></i></div>
+									<div><i class="icon-services-blocks ti-package"></i></div>
 									<div class="services-info">
 											<h3>Branding</h3>
 											<p>We deliver a memorable and exquisite brand identities, logo, symbols, typography, icons, colour, illustrations and brand guides.</p>
@@ -106,11 +106,11 @@
 					<!-- start min banner-->
 					<div class="jumbotron min-banner">
 						<div class="mb-content1">
-							<h3 class="wow">We are<span style="color: #97da29;"> Creative</span> & <span style="color: #97da29;">Dedicated</span></h3>
-							<p class="wow fadeIn" data-wow-delay="0.4s"> As we are fundamentally freelancers, we offer something different than bigger agencies...<br>Total dedication, flexible working times and professionalism.</p> 
+							<h3>We are<span style="color: #97da29;"> Creative</span> & <span style="color: #97da29;">Dedicated</span></h3>
+							<p> As we are fundamentally freelancers, we offer something different than bigger agencies...<br>Total dedication, flexible working times and professionalism.</p> 
 						</div>
 
-						<div class="mb-content2 wow fadeIn" data-wow-delay="0.4s">
+						<div class="mb-content2">
 							<h3>Start your project<br> with us</h3>
 							<div style="margin:auto; width: 127px; margin-bottom:20px;">
 								<a href="index.html#contact" class="btn btn-success btn-md my-btn" role="button">Get in touch</a>
@@ -121,14 +121,14 @@
 
 					<!-- start portfolio-->
 					<div class="container" id="portfolio">
-						<div class="section-title wow fadeIn" data-wow-delay=0.1s  style="margin-bottom:35px;"><h2>PORTFOLIO</h2></div>
-							<div class="title-tag wow fadeIn" data-wow-delay=0.1s>
+						<div class="section-title"  style="margin-bottom:35px;"><h2>PORTFOLIO</h2></div>
+							<div class="title-tag">
 								<p>We've had the opportunity and pleasure to work with some remarkable brands</p>
 							</div>
-						<div class="row iso-section">
-							<div class="iso-box-section col-xs-12 col-sm-12 col-md-12">
+						<div class="row">
+							<div class="col-xs-12 col-sm-12 col-md-12">
 								<div class="col-xs-12 col-sm-6 col-md-4">
-									<div class="iso-box img-container wow fadeIn" data-wow-delay=0.3s ><img src="img/portfolio/Branding 1.jpg" class="img-responsive my-img">
+									<div class="img-container"><img src="img/portfolio/Branding 1.jpg" class="img-responsive my-img">
 										<div class="portfolio-overlay">
 											<a href="#" class="ti-link"></a>
 											<h4>Branding</h4>
@@ -137,7 +137,7 @@
 									</div>
 								</div>
 								<div class="col-xs-12 col-sm-6 col-md-4">
-									<div class="iso-box img-container wow fadeIn" data-wow-delay=0.3s ><img src="img/portfolio/air.jpg" class="img-responsive my-img">
+									<div class="img-container"><img src="img/portfolio/air.jpg" class="img-responsive my-img">
 										<div class="portfolio-overlay">
 											<a href="#" class="ti-link"></a>
 											<h4>Logo Design</h4>
@@ -146,7 +146,7 @@
 									</div>
 								</div>
 								<div class="col-xs-12 col-sm-6 col-md-4">
-									<div class="iso-box img-container wow fadeIn" data-wow-delay=0.3s ><img src="img/portfolio/web design.jpg" class="img-responsive my-img">
+									<div class="img-container"><img src="img/portfolio/web design.jpg" class="img-responsive my-img">
 										<div class="portfolio-overlay">
 											<a href="#" class="ti-link"></a>
 											<h4>Web Design</h4>
@@ -155,7 +155,7 @@
 									</div>
 								</div>
 									<div class="col-xs-12 col-sm-6 col-md-4">
-										<div class="iso-box img-container wow fadeIn" data-wow-delay=0.5s ><img src="img/portfolio/square.jpg" class="img-responsive my-img">
+										<div class="img-container"><img src="img/portfolio/square.jpg" class="img-responsive my-img">
 											<div class="portfolio-overlay">
 
 												<a href="#" class="ti-link"></a>
@@ -165,7 +165,7 @@
 										</div>
 									</div>
 									<div class="col-xs-12 col-sm-6 col-md-4">
-										<div class="iso-box img-container wow fadeIn" data-wow-delay=0.5s ><img src="img/portfolio/webdesign.jpg" class="img-responsive my-img">
+										<div class="img-container"><img src="img/portfolio/webdesign.jpg" class="img-responsive my-img">
 											<div class="portfolio-overlay">
 
 												<a href="#" class="ti-link"></a>
@@ -175,7 +175,7 @@
 										</div>
 									</div>
 									<div class="col-xs-12 col-sm-6 col-md-4">
-										<div class="iso-box img-container wow fadeIn" data-wow-delay=0.5s ><img src="img/portfolio/Branding 2.jpg" class="img-responsive my-img">
+										<div class="img-container"><img src="img/portfolio/Branding 2.jpg" class="img-responsive my-img">
 											<div class="portfolio-overlay">
 
 												<a href="#" class="ti-link"></a>
@@ -192,12 +192,12 @@
 					<!-- start newsletter-->
 					<div class="container-fluid" id="subscribe">
 						<div class="row text-row">
-							<div class="newsletter col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6">
-								<h4 class="wow">Subscribe for our <span style="color:#97da29;" >newsletter!</span></h4>
-	    						<p class="wow fadeIn" data-wow-delay=0.2s>Don't Miss Anything <br/> Keep up with the <span style="color:#97da29;" >latest</span> technologies</p>
+							<div class="newsletter col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6">
+								<h4>Subscribe for our <span style="color:#97da29;">newsletter!</span></h4>
+	    						<p>Don't Miss Anything <br/> Keep up with the <span style="color:#97da29;">latest</span> technologies</p>
 							</div>
 						</div>
-						<form class="form-inline wow fadeIn" data-wow-delay=0.3s autocomplete="off">
+						<form class="form-inline" autocomplete="off">
 							<div class="row input-row">
 								<div class="col-xs-12 col-sm-offset-3 col-sm-6 col-md-offset-4 col-md-4">
 									<div class="col-xs-7 col-sm-8 col-md-8"><input class="form-control" style="width: 100%;" type="text" name="Email" placeholder="Enter your email" required /></div>
@@ -210,12 +210,12 @@
 
 					<!-- start about-->
 					<div id="about">
-						<div class="section-title wow fadeIn" data-wow-delay=0.1s><h2>ABOUT US</h2></div>
+						<div class="section-title"><h2>ABOUT US</h2></div>
 						<div class="about">
 							<div class="container">										
-								<div class="row  wow fadeIn" data-wow-delay=0.3s>
+								<div class="row ">
 									<div class="col-md-4">
-										<img src="img/page/about.jpg" class="img-responsive" id="abtImg">
+										<img src="img/page/about.jpg" class="img-responsive my-img">
 									</div>
 									<div class="col-md-8 about-brief">
 										<p>We pride ourselves on combining unique talents and outlooks as well as offering a personal and 
@@ -230,7 +230,7 @@
 					
 						<div class="about">
 							<div class="container">
-								<div class="row wow fadeIn" data-wow-delay=0.3s>
+								<div class="row">
 									<div class="col-md-6 about-brief">
 										<h4>Our Vision</h4>
 										<p>
@@ -255,8 +255,8 @@
 							<form action="contact.php" method="post">
 							<div class="col-xs-12 col-sm-12 col-md-6">
 								<div id="contact-form">
-									<h4 class="wow">reach out and we'll get back<br/>to you within <span style="color:#97da29;">24Hrs</span></h4>
-									<div class="wow fadeIn"  data-wow-delay=0.4s><div class="col-sm-6 col-md-6"><input class="input-n-e" type="text" name="name" placeholder="Name" autocomplete="off"/></div>
+									<h4>reach out and we'll get back<br/>to you within <span style="color:#97da29;">24Hrs</span></h4>
+									<div ><div class="col-sm-6 col-md-6"><input class="input-n-e" type="text" name="name" placeholder="Name" autocomplete="off"/></div>
 									<div class="col-sm-6 col-md-6"><input class="input-n-e" type="text" name="email" placeholder="Email" autocomplete="off"/></div>
 									<div class="col-md-12"><textarea class="input-m" type="text" rows="5" name="message" placeholder="Message"></textarea></div>
 									<div class="col-xs-offset-3 col-xs-6 col-sm-offset-4 col-sm-4 col-md-3"><input type="submit" value="Send"/></div>
@@ -266,9 +266,9 @@
 							</form>
 							<div class="col-xs-12 col-sm-12 col-md-6">
 								<div id="contact-info">
-									<h4 class="wow">Social Media</h4>
-									<p class="wow fadeIn"  data-wow-delay=0.4s>Hit us up on social media</p>
-									<div id="social-buttons" class="wow fadeIn"  data-wow-delay=0.9s>	
+									<h4>Social Media</h4>
+									<p >Hit us up on social media</p>
+									<div id="social-buttons" >	
 										<a class="ti-facebook" href="facebook.com"></a>
 										<a class="ti-twitter" href="twitter.com"></a>
 										<a class="ti-instagram" href="instagram.com"></a>
@@ -276,8 +276,8 @@
 										<a class="ti-google" href="google.com"></a>
 									</div>
 									<div>
-										<h4 class="wow">Visit office</h4>
-										<div class="wow fadeIn"  data-wow-delay=0.4s><p><i class="ti-location-pin"></i>Company, Lagos, Nigeria</p>
+										<h4>Visit office</h4>
+										<div ><p><i class="ti-location-pin"></i>Company, Lagos, Nigeria</p>
 										<p><i class="ti-mobile"></i>08138244150</p>
 										<p><i class="ti-email"></i>hello@company.ng</p></div>
 
