--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 							<div class="container">										
 								<div class="row ">
 									<div class="col-md-4">
-										<img src="img/page/about.jpg" class="img-responsive my-img">
+										<img src="img/page/about.jpeg" class="img-responsive my-img">
 									</div>
 									<div class="col-md-8 about-brief">
 										<p>We pride ourselves on combining unique talents and outlooks as well as offering a personal and 
