--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 								<h3 id="b-heading">We are<span style="color: #97da29;"> Creative</span> & <span style="color: #97da29;">Dedicated</span></h3>
 								<p> As we are fundamentally freelancers, we offer something different than bigger agencies...<br>Total dedication, flexible working times and professionalism.</p> 
 							
-								<h2 style="margin-top:40px;">Start your project<br> with us</h2>
+								<h2 style="margin-top:40px; font-size: 26px;">Start your project<br> with us</h2>
 								<div style="margin:auto; width: 127px; margin-top:24px;">
-									<a href="index.html#contact" class="btn btn-success btn-md my-btn" role="button">Get in touch</a>
+									<a href="#contact" class="btn btn-success btn-md my-btn js-scroll-trigger" role="button">Get in touch</a>
 								</div>
 							</div>
 						</div>				
@@ -119,7 +119,7 @@
 						<div class="row">
 							<div class="col-xs-12 col-sm-12 col-md-12">
 								<div class="col-xs-12 col-sm-6 col-md-4">
-									<div class="img-container"><img src="img/portfolio/Branding 1.jpg" class="img-responsive my-img">
+									<div class="img-container"><img src="img/Branding 1.jpg" class="img-responsive my-img">
 										<div class="portfolio-overlay">
 											<a href="#" class="ti-link"></a>
 											<h4>Branding</h4>
@@ -128,7 +128,7 @@
 									</div>
 								</div>
 								<div class="col-xs-12 col-sm-6 col-md-4">
-									<div class="img-container"><img src="img/portfolio/air.jpg" class="img-responsive my-img">
+									<div class="img-container"><img src="img/air.jpg" class="img-responsive my-img">
 										<div class="portfolio-overlay">
 											<a href="#" class="ti-link"></a>
 											<h4>Logo Design</h4>
@@ -137,7 +137,7 @@
 									</div>
 								</div>
 								<div class="col-xs-12 col-sm-6 col-md-4">
-									<div class="img-container"><img src="img/portfolio/web design.jpg" class="img-responsive my-img">
+									<div class="img-container"><img src="img/web design.jpg" class="img-responsive my-img">
 										<div class="portfolio-overlay">
 											<a href="#" class="ti-link"></a>
 											<h4>Web Design</h4>
@@ -146,7 +146,7 @@
 									</div>
 								</div>
 									<div class="col-xs-12 col-sm-6 col-md-4">
-										<div class="img-container"><img src="img/portfolio/square.jpg" class="img-responsive my-img">
+										<div class="img-container"><img src="img/square.jpg" class="img-responsive my-img">
 											<div class="portfolio-overlay">
 
 												<a href="#" class="ti-link"></a>
@@ -156,7 +156,7 @@
 										</div>
 									</div>
 									<div class="col-xs-12 col-sm-6 col-md-4">
-										<div class="img-container"><img src="img/portfolio/webdesign.jpg" class="img-responsive my-img">
+										<div class="img-container"><img src="img/webdesign.jpg" class="img-responsive my-img">
 											<div class="portfolio-overlay">
 
 												<a href="#" class="ti-link"></a>
@@ -166,7 +166,7 @@
 										</div>
 									</div>
 									<div class="col-xs-12 col-sm-6 col-md-4">
-										<div class="img-container"><img src="img/portfolio/Branding 2.jpg" class="img-responsive my-img">
+										<div class="img-container"><img src="img/Branding 2.jpg" class="img-responsive my-img">
 											<div class="portfolio-overlay">
 
 												<a href="#" class="ti-link"></a>
@@ -207,7 +207,7 @@
 							<div class="container">										
 								<div class="row ">
 									<div class="col-md-4">
-										<img src="img/page/about.jpeg" class="img-responsive my-img">
+										<img src="img/about.jpg" class="img-responsive my-img">
 									</div>
 									<div class="col-md-8 about-brief">
 										<p>We pride ourselves on combining unique talents and outlooks as well as offering a personal and 
